RegisterSuccessModal sign in button alignment fixed

--- a/src/components/RegisterSuccessModal/RegisterSuccessModal.css
+++ b/src/components/RegisterSuccessModal/RegisterSuccessModal.css
@@ -6,6 +6,8 @@
   width: 350px;
   background: none;
   border: none;
+  text-align: start;
+  padding-left: 0px;
 }
 
 @media screen and (max-width: 498px) {
